Adjust preview steps - FIX steps missing in video - FIX Avoid overlap problem with "open original" vs step

--- a/app/assets/stylesheets/gi_album/album/module.scss
+++ b/app/assets/stylesheets/gi_album/album/module.scss
@@ -212,15 +212,21 @@ body {
   background-repeat: no-repeat;
 }
 
+.gi-photo-preview-video  {
+  height: 100%;
+  width: 100%;
+  position: relative;
+}
+
 .gi-photo-preview-video img {
-  height: 100px;
+  height: 100%;
 }
 
 .gi-photo-step {
   position: absolute;
   top: 0;
-  width: 15%;
   height: 100%;
+  width: 15%;
   color: rgba(0, 0, 0, 0);
 }
 
@@ -249,4 +255,11 @@ html.no-touch .gi-photo-step:hover {
 
 .gi-photo-next {
   right: 0;
+}
+
+.gi-photo-preview a {
+  position: absolute;
+  left: 15%;
+  width: 70%;
+  background-color: rgba(200, 200, 200, 0.3);
 }
